--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <a id="科研经历" class="anchor" href="#%E7%A7%91%E7%A0%94%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>科研经历</h3>
 
 <ul>
-<li>2012-2014 参与北师大本科生基金，《基于Researchgate的学术社交网络分析》，在所有本科生基金中获得第一名。</li>
-<li>2015 毕业论文《基于新浪微博的网络舆情分析》，基于word2vec、LDA等模型对抓取的新浪微博数据进行舆情分析。</li>
-<li>2015 参与NLPCC2015实体链接比赛，合作发表论文Linking Entities in Chinese Queries to Knowledge Graph. NLPCC 2015: 590-597</li>
-<li>2016 参与<a href="http://media.nwnu.edu.cn/show.asp?id=709">第二届数据新闻大赛</a>，爬虫抓取数据，基于LSA、topic model进行数据可视化分析。</li>
+<li>2012-2014: 参与北师大本科生基金，《基于Researchgate的学术社交网络分析》，在所有本科生基金中获得第一名。</li>
+<li>2015: 毕业论文《基于新浪微博的网络舆情分析》，基于word2vec、LDA等模型对抓取的新浪微博数据进行舆情分析。</li>
+<li>2015: 参与<a href="http://tcci.ccf.org.cn/conference/2015/">NLPCC2015</a>实体链接比赛，合作发表论文Linking Entities in Chinese Queries to Knowledge Graph. NLPCC 2015: 590-597</li>
+<li>2016: 参与<a href="http://media.nwnu.edu.cn/show.asp?id=709">第二届数据新闻大赛</a>，爬虫抓取数据，基于LSA、topic model进行数据可视化分析。</li>
 </ul>
 
 <h3>
