--- a/index.html
+++ b/index.html
@@ -40,24 +40,25 @@
 <li>2012-2014: 参与北师大本科生基金，《基于Researchgate的学术社交网络分析》，在所有本科生基金中获得第一名。</li>
 <li>2015: 毕业论文《基于新浪微博的网络舆情分析》，基于word2vec、LDA等模型对抓取的新浪微博数据进行舆情分析。</li>
 <li>2015: 参与<a href="http://tcci.ccf.org.cn/conference/2015/">NLPCC2015</a>实体链接比赛，合作发表论文Linking Entities in Chinese Queries to Knowledge Graph. NLPCC 2015: 590-597</li>
-<li>2016: 参与<a href="http://media.nwnu.edu.cn/show.asp?id=709">第二届数据新闻大赛</a>，爬虫抓取数据，基于LSA、topic model进行数据可视化分析。</li>
+<li>2016: 参与<a href="http://media.nwnu.edu.cn/show.asp?id=709">第二届数据新闻大赛</a>，爬虫抓取数据，基于LSA、topic model分析文本数据利用D3、ECharts进行数据可视化分析。</li>
 </ul>
 
 <h3>
 <a id="实习经历" class="anchor" href="#%E5%AE%9E%E4%B9%A0%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>实习经历</h3>
 
 <ul>
-<li>2013.6-8 在中国科学技术信息研究所实习，参与数据抓取、清洗工作，并使用R进行数据分析。</li>
-<li>2015.3-6 在交通运输部科学研究院实习，负责维护Oracle数据库，并使用BIRT参与部分BI项目实现。</li>
+<li>2013.6-8： 在中国科学技术信息研究所实习期间，参与数据抓取、清洗、整理工作，并使用R对网络数据进行数据分析。</li>
+<li>2015.3-6： 在交通运输部科学研究院实习期间，负责维护Oracle数据库，采用Java的开源软件BIRT参与BI报表项目实现。</li>
+<li>2015.9-11： 基于图数据库Neo4j对维基数据构建底层知识图谱数据库，并投入使用。</li>
 </ul>
 
 <h3>
 <a id="教育和获奖经历" class="anchor" href="#%E6%95%99%E8%82%B2%E5%92%8C%E8%8E%B7%E5%A5%96%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>教育和获奖经历</h3>
 
 <ul>
-<li>使用Python和R多次参与Kaggle竞赛并进入前30%。</li>
-<li>参加北师大2014年ACM竞赛获得二等奖。</li>
 <li>数次获得京师学术奖学金。</li>
+<li>多次参加Kaggle竞赛并进入前30%。</li>
+<li>北师大2014年ACM竞赛获得二等奖。</li>
 <li>参与课题基于Researchgate的学术社交网络分析获得本科第一名。</li>
 
 </ul>
