--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="个人简介" class="anchor" href="#%E9%BB%84%E5%8B%87%E7%9A%84%E5%8D%9A%E5%AE%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人简介</h3>
 
-<p>本科毕业于北京师范大学信息管理与信息系统专业，关注Oracle、MySQL等数据库技术，熟悉Java和R语言，了解Scala和python。研究生就读于北师大计算机系，关注知识图谱、Neo4j等。喜爱三国杀等游戏，更喜欢跑步健身游泳羽毛球运动。</p>
+<p>本科毕业于北京师范大学信息管理与信息系统专业，关注Oracle、MySQL等数据库技术，熟悉Java和R语言，了解python和Scala。研究生就读于北师大计算机系，关注知识图谱、Neo4j等。喜爱三国杀，也喜欢跑步健身游泳羽毛球运动。</p>
 
 <h3>
 <a id="科研经历" class="anchor" href="#%E7%A7%91%E7%A0%94%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>科研经历</h3>
@@ -40,7 +40,7 @@
 <li>2012-2014: 参与北师大本科生基金，《基于Researchgate的学术社交网络分析》，在所有本科生基金中获得第一名。</li>
 <li>2015: 毕业论文《基于新浪微博的网络舆情分析》，基于word2vec、LDA等模型对抓取的新浪微博数据进行舆情分析。</li>
 <li>2015: 参与<a href="http://tcci.ccf.org.cn/conference/2015/">NLPCC2015</a>实体链接比赛，合作发表论文Linking Entities in Chinese Queries to Knowledge Graph. NLPCC 2015: 590-597</li>
-<li>2016: 参与<a href="http://media.nwnu.edu.cn/show.asp?id=709">第二届数据新闻大赛</a>，爬虫抓取数据，基于LSA、topic model进行数据可视化分析。</li>
+<li>2016: 参与<a href="http://media.nwnu.edu.cn/show.asp?id=709">第二届数据新闻大赛</a>，爬虫抓取数据，基于LSA、topic model进行数据处理，并采用D3,ECharts进行数据可视化分析。</li>
 </ul>
 
 <h3>
@@ -65,7 +65,7 @@
 <h3>
 <a id="相关链接" class="anchor" href="#%E7%9B%B8%E5%85%B3%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>相关链接</h3>
 
-<p>黄勇的<a href="http://weibo.com/u/2530283004/home?wvr=5">新浪微博</a>，<a href="https://github.com/shell4j">GitHub</a>。</p>
+<p>黄勇的<a href="http://weibo.com/u/2530283004/home?wvr=5">新浪微博</a>，<a href="https://github.com/shell4j">GitHub</a>，<a href="https://www.kaggle.com/shell4j">Kaggle</a>。</p>
         </section>
 
         <footer>
