--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="个人简介" class="anchor" href="#%E9%BB%84%E5%8B%87%E7%9A%84%E5%8D%9A%E5%AE%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人简介</h3>
 
-<p>本科毕业于北京师范大学信息管理与信息系统专业，关注Oracle、MySQL等数据库技术，熟悉Java和R语言，了解python和Scala。研究生就读于北师大计算机系，关注知识图谱、Neo4j等。喜爱三国杀，也喜欢跑步健身游泳羽毛球运动。</p>
+<p>本科毕业于北京师范大学信息管理与信息系统专业，关注MySQL等数据库技术，熟悉Java和R语言，了解python和Scala。研究生就读于北师大计算机系，关注知识图谱、Neo4j等。喜爱三国杀，也喜欢跑步健身游泳羽毛球运动。是一个爱编程、爱健身、爱钻研新技术的好同学</p>
 
 <h3>
 <a id="科研经历" class="anchor" href="#%E7%A7%91%E7%A0%94%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>科研经历</h3>
